Added posts alteration
